Step8 요구사항 충족 (#362)
* Step8 요구사항 충족

- Krane에 배포를 위한 Dockerfile 생성
- jar파일로 빌드할때 발생하는 문제 해결을 위해 build.gradle 수정
- 파일을 불러올때 경로를 classPath에서 받아오도록 수정

* Step8 요구사항 충족

- template파일에 임의의 접근을 막기위해 디렉토리 분리
- 시스템 로그와 사용자 로그를 분리하여 파일로 저장하는 기능 추가
- 회원가입시 중복에 대한 처리 추가

* Step8 요구사항 충족

- 성능분석을 위한 locust 스크립트 파일 추가

Co-authored-by: konempty <konempty@github.com>