@@ -6,14 +6,12 @@ import bin.jayden.util.Constants;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.Iterator;
 import java.util.List;
 
 public class UserService {
-    private static final Logger log = LoggerFactory.getLogger(UserService.class);
+    private static final Logger log = LoggerFactory.getLogger("USERLOG");
     private final UserRepository repository;
 
     public UserService(UserRepository repository) {
@@ -21,8 +19,7 @@ public class UserService {
     }
 
     public String getUserListHtml() throws IOException {
-        File file = new File(Constants.RESOURCE_PATH + "/user/list.html");
-        byte[] htmlBytes = Files.readAllBytes(file.toPath());
+        byte[] htmlBytes = getClass().getResourceAsStream(Constants.TEMPLATE_PATH + "/user/list.html").readAllBytes();
         String htmlString = new String(htmlBytes);
         StringBuilder listHtml = new StringBuilder();
         List<User> users = repository.getUserList();
@@ -54,7 +51,13 @@ public class UserService {
     }
 
     public User getLoginUser(String userId, String password) {
-        return repository.getUser(userId, password);
+        User user = repository.getUser(userId, password);
+        if (user != null)
+            log.info("login User (userId : {})", userId);
+        else
+            log.info("login fail (userId : {})", userId);
+
+        return user;
     }
 
 }
